[package]
name = "fe_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "docker_service"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.71"
docker-compose-types = { version = "0.5.1" }
dockerfile = "0.2.1"
serde_yaml = "0.9.21"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "1.9.3", features = ["serde-1"] }
fs_extra = "1.3.0"
duct_sh = "0.13.6"
os_info = "3.7.0"
